--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,10 +25,10 @@
 }
 
 #btn-sign-up {
-  width: 40%;
+  width: 240px;
   border: 1px solid #fafafa !important;
   border-radius: 50px;
-  background-color: rgba(200,200,200,0.2) !important;
+  background-color: rgba(200,200,200,0.1) !important;
 }
 
 #btn-sign-up:hover {
