--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -62,7 +62,8 @@ input:focus + label {
 }
 
 input:focus {
-    border-bottom: 1px solid $blue !important;
+  border-bottom: 1px solid $blue !important;
+  box-shadow: 0 1px 0 0 $blue !important;
 }
 
 form abbr {
