--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -1,6 +1,6 @@
 <div id="homepage-top">
   <h1>The best place for your business</h1>  
-  <h3>ShopSpot</h3>
+  <%= image_tag('logoblack.png', style: 'height:95px;width:auto;') %>
 </div>
 
 <div id="homepage-middle" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.vox-cdn.com/thumbor/3job2Q0siUze1rXAHq4aXEYdX0M=/339x0:1238x599/1200x800/filters:focal(339x0:1238x599)/cdn.vox-cdn.com/uploads/chorus_image/image/45205974/uber_SafeCities_BlogHeader.0.0.png');">
