--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -39,11 +39,11 @@
       </div>
       <div id="map"
         style="width: 100%; height: 600px;"
-        data-lat="<%= session["search_coordinates"][0] %>"
-        data-long="<%= session["search_coordinates"][1] %>"
+        data-lat="<%= @query["latitude"] %>"
+        data-long="<%= @query["longitude"] %>"
         data-zoom="14"
-        data-radius="<%= session['radius_catchment'] %>"
-        data-radiussearch="<%= session['radius_search'] %>"
+        data-radius="<%= @query['radius_catchment_area'] %>"
+        data-radiussearch="<%= @query['radius_search'] %>"
       ></div>
     </div>
 
@@ -56,7 +56,7 @@
 
     let heatmap = null;
     function metersPerPixel(map) {
-      return (Math.cos(<%= session["search_coordinates"][0] %> * Math.PI/180) * 2 * Math.PI * 6378137 / (256 * Math.pow(2, map.getZoom())));
+      return (Math.cos(<%= @query["latitude"] %> * Math.PI/180) * 2 * Math.PI * 6378137 / (256 * Math.pow(2, map.getZoom())));
     }
     function changeRadius(radius) {
       heatmap.set('radius', radius * 1.3);
@@ -82,21 +82,21 @@
       let bounds = new google.maps.LatLngBounds();
       <% @competitors.each do |competitor| %>
         var marker = new google.maps.Marker({
-          position: {lat:<%= competitor.location["lat"].to_f%>, lng:<%= competitor.location["lng"].to_f %>},
+          position: {lat:<%= competitor["lat"].to_f%>, lng:<%= competitor["lng"].to_f %>},
           map: map,
           title: 'Hello World!'
         });
         markers.push(marker);
-        points.push(new google.maps.LatLng(<%= competitor.location["lat"].to_f%>, <%= competitor.location["lng"].to_f %>))
+        points.push(new google.maps.LatLng(<%= competitor["lat"].to_f%>, <%= competitor["lng"].to_f %>))
         bounds.extend( marker.getPosition() );
       <% end %>
       map.fitBounds(bounds);
 
-    var radius = Math.floor(<%= session['radius_catchment'] %> / metersPerPixel(map));
+    var radius = Math.floor(<%= @query['radius_catchment_area'] %> / metersPerPixel(map));
         heatmap = new google.maps.visualization.HeatmapLayer({
           data: points,
           radius: radius,
-          radiusCatch: <%= session['radius_catchment'] %>,
+          radiusCatch: <%= @query['radius_catchment_area'] %>,
           map: map
         });
         changeGradient();
