--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
     <%= f.input :address, label: 'Address', placeholder: '1 rue Charlemagne, Lyon', input_html: { value: '1 rue Charlemagne, Lyon' } %>
-    <%= f.input :activity, label: 'Activity', placeholder: 'Bakery', input_html: { value: 'Bakery' } %>
+    <%= f.input :activity, label: 'Activity', placeholder: 'Bakery', input_html: { value: 'bakery' } %>
     <%= f.input :radius_search, label: 'Radius search in meters', placeholder: '1000', input_html: { value: '1000'} %>
     <%= f.input :radius_catchment_area, label: 'Catchment in meters', placeholder: '200', input_html: { value: '200' } %>
     <%= f.button :button, "Find my results", class: 'btn btn-primary', id: 'btn-form-homepage'  %>
