--- a/app/views/shared/_show_search.html.erb
+++ b/app/views/shared/_show_search.html.erb
@@ -1,10 +1,10 @@
 <div id="ssframe">
   <div id="sscontent">
     <div id="sstitle">
-      <p><strong>Your search</strong></p>
-      <p> <i class="fa fa-users" aria-hidden="true"></i> Activity : <%= @query.activity %> </p>
-      <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Radius search : <%= @query.radius_search %></p>
-      <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Catchment area : <%= @query.radius_catchment_area %></p>
+      <h3>Your search</h3>
     </div>
+    <p> <i class="fa fa-users" aria-hidden="true"></i> Activity : <%= @query.activity %> </p>
+    <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Radius search : <%= @query.radius_search %></p>
+    <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Catchment area : <%= @query.radius_catchment_area %></p>
   </div>
 </div>
