--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,15 +55,18 @@
   right: 5px;
   top: 50px;
   z-index:20;
-  width: 180px;
-  height: 180px;
+  width: 250px;
   font-size: 10px;
   padding: 15px;
   h3 {
-    font-size: 15px;
+    font-size: 1.8rem;
     margin: 0;
     padding-bottom: 10px;
   }
+}
+
+p {
+  font-size: 1.8rem;
 }
 
 #setting-open {
@@ -83,7 +86,7 @@
   font-size: 10px;
   padding: 15px;
   h3 {
-    font-size: 15px;
+    font-size: 2rem;
     margin: 0;
     padding-bottom: 10px;
   }
