--- a/app/assets/stylesheets/components/_show_card.scss
+++ b/app/assets/stylesheets/components/_show_card.scss
@@ -13,25 +13,33 @@
   padding: 10px;
   line-height: 70%;
   h3 {
-    font-size: 15px;
-    font-weight: bold;
+    font-size: 1.8rem;
+    font-weight: 600;
     color: #555;
     margin-bottom: 12px;
   }
   p {
-    font-size: 15px;
+    font-size: 1.8 rem;
+    font-weight: 400;
+    color: #333;
   }
 }
 
 #scresults {
   margin-top: 10px;
+  display: flex
+}
+
+#scresleft, #scresright {
+  width: 50%;
+  margin: 0 10px;
 }
 
 #scpopgraph {
   margin-top: 20px;
   margin-bottom: 30px;
-  width: 150px;
-  height: 70px;
+  width: 90%;
+  height: 100px;
   text-align: center;
     p {
     font-size: 13px;
@@ -43,4 +51,12 @@
 #sctitle {
   border-bottom: 1px solid #555;
   margin: 10px 0;
+}
+
+#insee {
+  font-weight: 300;
+}
+
+#scpopcatchment, #sccomp, #scpopcity, #insee {
+  margin-bottom: 40px;
 }
