--- a/app/assets/stylesheets/components/_show_search.scss
+++ b/app/assets/stylesheets/components/_show_search.scss
@@ -12,18 +12,20 @@
   background: #F9F9F9;
   padding: 10px;
   line-height: 70%;
+  width: 100%;
   h3 {
-    font-size: 15px;
+    font-size: 1.8rem;
     font-weight: bold;
     color: #555;
     margin-bottom: 12px;
   }
   p {
-    font-size: 15px;
+    font-size: 1.8rem;
   }
 }
 
 #sstitle {
   border-bottom: 1px solid #555;
   margin: 10px 0;
+  text-align: right;
 }
