--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -78,10 +78,10 @@
   border-radius: 2px;
   text-align: center !important;
   h4 {
-    font-size: 20px;
+    font-size: 2.2rem;
   }
   p {
-    font-size: 15px;
+    font-size: 1.8rem;
     color: #555;
   }
 }
