--- a/app/assets/stylesheets/pages/_queriesindex.scss
+++ b/app/assets/stylesheets/pages/_queriesindex.scss
@@ -16,14 +16,23 @@
 #mapcaption {
   padding: 10px;
   background: white;
-  display: flex;
-  align-items: center;
 }
+
+#mapsettings {
+  display: flex;
+  width: 100%;
+  height: 50%;
+}
+
+#setting-current {
+  width: 100%;
+}
+
 .stacked-bar-graph {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 40px;
+  height: 50%;
   color:#F4F4F4;
   font-weight: 600;
 
