--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -3,6 +3,7 @@
 <div class="indexcontent">
   <div class="indexcards">
       <% @queries.each do |query|
+        p query
         @query = query
         @competitors = JSON.parse(@query.competitors_json) %>
         <%= render 'shared/result_card' %>
@@ -62,8 +63,6 @@
 </div>
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
-
-
 
     let heatmap = null;
     function metersPerPixel(map) {
