--- a/app/views/shared/_show_card.html.erb
+++ b/app/views/shared/_show_card.html.erb
@@ -36,7 +36,7 @@
         <div id="sccomp">
           <p>Competitors</p>
           <p> <i class="fa fa-briefcase" aria-hidden="true"></i> Competitors : TOUPDATE </p>
-          <p> <i class="fa fa-star" aria-hidden="true"></i> Population / competitor : TOUPDATE </p>
+          <p> <i class="fa fa-star" aria-hidden="true"></i> Population / competitor : <%= @competitors.count %> </p>
           <p> <i class="fa fa-star" aria-hidden="true"></i> Average Rating : TOUPDATE </p>         
         </div>
       </div>
