--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -4,6 +4,7 @@
     <div id=showsearch>
       <%= render 'shared/show_search' %>
     </div>
+
     <div id="showmapframe">
       <div id="showmapcontent">
         <%= static_map_for(@query) %>
@@ -14,29 +15,22 @@
     <%= render 'shared/show_card' %>
   </div>
   <div id="showright">
-    <div style="text-align: center"><%= link_to 'Download Pdf', query_path(@query, format: :pdf), class: 'btn btn-primary', id:'btn-show' %> </div>
-    <div id="showstreetframe">
-      <div id="showstreetcontent">
-        <%= street_view(session['search_coordinates']) %>
+    <div id="linksframe">
+      <div id="linkscontent">
+        <div id="linkstitle">
+          <h3>Want more ?</h3>
+        </div>
+        <div style="text-align: center"><%= link_to 'Download Pdf', query_path(@query, format: :pdf), class: 'btn btn-primary', id:'btn-show' %>
+          <a class='btn btn-primary' id='btn-show' href='#'>Cities analytics</a>
+          <%= link_to 'View competition', query_competitors_path(@query), class: 'btn btn-primary', id:'btn-show' %>
+        </div> 
       </div>
     </div>
-  </div>
-</div>
-
-          <p>Take action and realize your dream? Contact right here</p>
-          <%= link_to 'View competition', query_competitors_path(@query), class: 'btn btn-primary', id:'btn-show' %>
-        </div>
-        <div class="buttons-next-action">
-          <p>Not enough potential customers? Surronding cities comparator right here</p>
-          <a class='btn btn-primary' id='btn-show' href='#'>Cities analytics</a>
-        </div>
+    <div id="showstreetframe">
+      <div id="showstreetcontent">
+        <%= street_view(@query) %>
       </div>
-      <div class="col-xs-12 col-sm-6">
-          
-
-          <div class="">
-            
-          </div>
+    </div>
   </div>
 </div>
 
