--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,15 @@
 
 @import "bootstrap";
 
+p {
+  font-size: 1.8rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+
 
 .myflex {
   display:flex;
@@ -65,9 +74,6 @@
   }
 }
 
-p {
-  font-size: 1.8rem;
-}
 
 #setting-open {
   cursor: pointer;
