--- a/app/assets/stylesheets/components/_show_search.scss
+++ b/app/assets/stylesheets/components/_show_search.scss
@@ -1,6 +1,5 @@
 #ssframe {
-  color: #555;
-  background: #FAFAFA;
+  background: $backcards;
   margin: 10px;
   display: flex;
   align-items: center;
@@ -9,23 +8,16 @@
 }
 
 #sscontent {
-  background: #F9F9F9;
   padding: 10px;
-  line-height: 70%;
+  line-height: 120%;
   width: 100%;
   h3 {
-    font-size: 1.8rem;
-    font-weight: bold;
-    color: #555;
     margin-bottom: 12px;
-  }
-  p {
-    font-size: 1.8rem;
   }
 }
 
 #sstitle {
-  border-bottom: 1px solid #555;
+  border-bottom: 1px solid #EEE;
   margin: 10px 0;
   text-align: right;
 }
