--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,11 +2,12 @@
   display: flex;
   height: calc(100vh - 70px);
   justify-content: space-between;
-  margin: 10px 30px;
+  margin: 30px;
+  background: $lightblue;
 }
 
 #showleft {
-  width: 400px;
+  width: 300px;
 }
 
 #showcard {
@@ -30,7 +31,6 @@
 }
 
 #showmapcontent {
-  background: #F9F9F9;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -60,12 +60,6 @@
   background: #F9F9F9;
   padding: 10px;
     h3 {
-    font-size: 1.8rem;
-    font-weight: bold;
-    color: #555;
     margin-bottom: 12px;
-  }
-  p {
-    font-size: 1.8rem;
   }
 }
