--- a/app/views/shared/_show_card.html.erb
+++ b/app/views/shared/_show_card.html.erb
@@ -4,7 +4,6 @@
       <p><strong>Your results</strong></p>
       <p><%= @query.address %></p>
     </div>
-
     <div id="scresults">
 
       <div id="scresleft">
@@ -48,7 +47,7 @@
           <p><i class="fa fa-users" aria-hidden="true"></i> Population : <%= @city.population %> </p>
           <p><i class="fa fa-user-circle-o" aria-hidden="true"></i> Density : <%= @city.population.fdiv(@city.area*1000000) %></p>
           <p><i class="fa fa-usd" aria-hidden="true"></i> Revenues : <%= @city.revenu %>€ / tax-unit</p>
-          <p><i class="fa fa-birthday-cake" aria-hidden="true"></i> Unemployment rate : <%= @city.chomage %></p>
+          <p><i class="fa fa-birthday-cake" aria-hidden="true"></i> Middle age : TOUPDATE years old</p>
           <div id="scpopgraph">
             <div id="rcpopgraphhead">
               <div id="rcpopgraphhead1"><p>TU %</p></div>
@@ -69,13 +68,16 @@
         </div>
         <div id="insee">
           <p>Insee analytics</p>
-          <p>Gender <i class="fa fa-mars" aria-hidden="true"></i>
+          <p><i class="fa fa-mars" aria-hidden="true"></i>
  : TOUPDATE % | <i class="fa fa-venus" aria-hidden="true"></i> TOUPDATE %
  </p>
           <p><i class="fa fa-male" aria-hidden="true"></i> Unemployment : TOUPDATE</p>
           <p><i class="fa fa-birthday-cake" aria-hidden="true"></i> Middle age : TOUPDATE
         </div>
       </div>
+      <p>aaa</p>
     </div>
   </div>
 </div>
+
+ 
