delete button on queries

--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -22,10 +22,12 @@
     <div class="rctitle">
       <%= image_tag("five-stars.png", height: '12') %>
       <h3><%= @query.address %></h3>
-
       <div id="icon<%= @query.id %>">
         <i class="fa fa-eye" aria-hidden="true" data-id="<%= @query.id %>"></i>
         <i class="fa fa-eye-slash infohide" aria-hidden="true" data-id="<%= @query.id %>"></i>
+          <%= link_to "" , query_path(@query),class: "fa fa-trash-o",
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
       </div>
     </div>
     <div class="rcresults">
