Fix bootstrap + materialize JS and CSS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,8 @@
 
 
 // External libraries
-@import "materialize";
+
+@import "materialize-custom";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome-sprockets";
