--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,7 +3,8 @@
   border-color: $blue !important;
 }
 #btn-show {
-    width: 250px !important;
+    width: 100%;
+    margin-bottom: 15px;
 }
 
 #btn-sign-up {
