--- a/app/assets/stylesheets/components/_result-card.scss
+++ b/app/assets/stylesheets/components/_result-card.scss
@@ -12,9 +12,10 @@
 
 .rccontent {
   position: absolute;
+  padding: 10px;
   line-height: 90%;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   h3 {
     margin-bottom: 12px;
   }
