--- a/app/views/shared/_show_search.html.erb
+++ b/app/views/shared/_show_search.html.erb
@@ -3,8 +3,8 @@
     <div id="sstitle">
       <h3>Your search</h3>
     </div>
-    <p> <i class="fa fa-users" aria-hidden="true"></i> Activity : <%= @query.activity %> </p>
-    <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Radius search : <%= @query.radius_search %></p>
-    <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Catchment area : <%= @query.radius_catchment_area %></p>
+    <p> <i class="fa fa-users" aria-hidden="true"></i> Activity : <strong><%= @query.activity %></strong> </p>
+    <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Radius search : <strong><%= @query.radius_search %> m</strong>  </p>
+    <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Catchment area : <strong><%= @query.radius_catchment_area %>m</strong></p>
   </div>
 </div>
