--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,7 @@ body {
 
 p {
   font-size: 1.8rem;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 a {
@@ -54,7 +54,9 @@ h3 {
 }
 
 .fa {
-  color: #BBB;
+  color: #CCC;
+  font-size: 2.1rem;
+  margin-right: 0.6rem;
 }
 
 .myflex {
