--- a/app/assets/stylesheets/components/_popgraph.scss
+++ b/app/assets/stylesheets/components/_popgraph.scss
@@ -12,7 +12,7 @@
 #rcpopgraphhead {
   display: flex;
   height: 20%;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
 }
 
@@ -26,7 +26,7 @@
 #rcpopgraphbot {
   display: flex;
   height: 20%;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
 }
 
