--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -28,7 +28,7 @@
   font-family: Raleway;
   background: #F4F4F4;
   text-align: center;
-  margin-bottom: 100px;
+  padding-bottom: 100px;
   h1 {
     margin-top: 0;
     padding: 50px;
