--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,7 +2,7 @@
   display: flex;
   height: calc(100vh - 70px);
   justify-content: space-between;
-  margin: 30px;
+  margin: 30px 80px;
   background: $lightblue;
 }
 
@@ -51,15 +51,19 @@
 
 #linksframe {
   color: #555;
-  background: #FAFAFA;
+  background: $backcards;
   margin: 10px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
 }
 
 #linkscontent {
-  background: #F9F9F9;
   padding: 10px;
     h3 {
     margin-bottom: 12px;
   }
+}
+
+#linkstitle {
+  border-bottom: 1px solid #EEE;
+  margin: 10px 0;
 }
