--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
 
     <% if user_signed_in? %>
       <!-- Links when logged in -->
-      <%= link_to "My serach", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "My searches", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to destroy_user_session_path, method: :delete do %>
         <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
       <% end %>
