correction competitors catchment_area

--- a/app/views/shared/_show_card.html.erb
+++ b/app/views/shared/_show_card.html.erb
@@ -34,7 +34,7 @@
         </div>
         <div id="sccomp">
           <p>Competitors</p>
-               <p> <i class="fa fa-briefcase" aria-hidden="true"></i> Competitors : <%= @competitors.count %> </p>
+               <p> <i class="fa fa-briefcase" aria-hidden="true"></i> Competitors : <%= @query.competitors_catchment %> </p>
           <p> <i class="fa fa-star" aria-hidden="true"></i> Population / competitor : TOUPDATE </p>
           <p> <i class="fa fa-star" aria-hidden="true"></i> Average Rating : TOUPDATE </p>
         </div>
@@ -84,4 +84,4 @@
   </div>
 </div>
 
- 
+
