--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,6 +7,10 @@
     margin-bottom: 15px;
 }
 
+#btn-show:hover {
+      opacity: 0.7;
+}
+
 #btn-sign-up {
   width: 240px;
   border: 1px solid #fafafa !important;
