--- a/app/assets/stylesheets/components/_show_search.scss
+++ b/app/assets/stylesheets/components/_show_search.scss
@@ -8,7 +8,7 @@
 }
 
 #sscontent {
-  padding: 10px;
+  padding: 10px 25px;
   line-height: 140%;
   width: 100%;
   h3 {
@@ -19,5 +19,10 @@
 #sstitle {
   border-bottom: 1px solid #EEE;
   margin: 10px 0;
-  text-align: right;
+}
+
+.backtohome a {
+  font-weight: 500;
+  text-decoration: none;
+  color: $blue;
 }
